--- a/src/assets/styles/general/global.scss
+++ b/src/assets/styles/general/global.scss
@@ -28,12 +28,12 @@
   opacity: 0.8;
 }
 // INPUT AND TEXREA
-input[type="text"], input[type="password"], input[type="search"], textarea {
+input[type="text"], input[type="password"], input[type="search"],input[type="number"], textarea {
   border: 1px solid #aaa;
   outline: none ;
   padding-left: 5px;
 }
-input[type="text"]:focus, input[type="password"]:focus, input[type="search"]:focus, textarea:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="search"]:focus,input[type="number"]:focus, textarea:focus {
   border: 1px solid var(--primary);
   outline: none;
   box-shadow: none;
@@ -134,4 +134,52 @@ a {
 }
 .page-link:hover {
   color: var(--primary);
+}
+.vue-pagination {
+  text-align: center;
+}
+.vue-pagination ul{
+  margin: auto;
+  display: inline-flex;
+  overflow: hidden;
+}
+.vue-pagination a {
+  display: block;
+  padding: 8px 15px;
+  border: 1px solid #dee2e6;
+  font-weight: bold;
+  color: var(--primary) !important;
+  margin-left: -1px;
+}
+.vue-pagination li.active a{
+  background-color: var(--primary);
+  color: white !important;
+}
+.vue-pagination li:first-child a{
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  margin-left: 0;
+}
+.vue-pagination li:last-child a{
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+// NAVBAR 
+// secondary navbar
+.secondary-style-nav li {
+  cursor: pointer;
+}
+.secondary-style-nav li:hover h4 {
+  color: #333 !important;
+}
+.secondary-style-nav li.active {
+  border-bottom: 2px solid #666;
+  color: #333 !important;
+}
+.secondary-style-nav li.active h4 {
+  color: #333 !important;
+}
+// container 
+.w-1300 {
+  width: 1300px;
 }
