--- a/src/assets/styles/general/global.scss
+++ b/src/assets/styles/general/global.scss
@@ -1,4 +1,11 @@
 
+// GLOBAL
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #2c3e50;
+}
 // VARIABLE
 :root {
   --bs-primary: #06bbcc !important;
